@@ -24,6 +24,9 @@ Changes in openair 0.8-0 [2012-05-30]
 	barchart
 *	Fix windRose bug when wind direction name was not wd
 *	Fix bug in importAURN when pollutant = "all" was specified
+*	Allow minimum value of breaks in ws to be above minimum ws
+	value, but warn.
+*	Allow day to be numeric in selectByDate to select days of the month
 
 Changes in openair 0.7-0 [2012-05-30]
 =====================================
